Deployment/Kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fedodo-home-deployment
  namespace: fedodo-org
spec:
  selector:
    matchLabels:
      app: fedodo-home
  template:
    metadata:
      labels:
        app: fedodo-home
    spec:
      containers:
        - name: fedodo-home
          image: fedodo/fedodo-home:dev
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              name: port-http

---
apiVersion: v1
kind: Service
metadata:
  name: fedodo-home-service
  namespace: fedodo-org
spec:
  selector:
    app: fedodo-home
  ports:
    - port: 80
      targetPort: port-http
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fedodo-home-ingress
  namespace: fedodo-org
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
spec:
  tls:
    - hosts:
        - "fedodo.org"
        - "www.fedodo.org"
      secretName: fedodo-home-cert
  rules:
    - host: fedodo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fedodo-home-service
                port:
                  number: 80
    - host: www.fedodo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fedodo-home-service
                port:
                  number: 80

---
# Needed because of HTTP to HTTPS redirecting
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fedodo-home-ingress-http
  namespace: fedodo-org
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
spec:
  rules:
    - host: fedodo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fedodo-home-service
                port:
                  number: 80
    - host: www.fedodo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fedodo-home-service
                port:
                  number: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: fedodo-org
spec:
  redirectRegex:
    regex: '^https?://(?:www\.)?(.+)'
    replacement: "https://${1}"
    permanent: true
